--- a/backend/package.json
+++ b/backend/package.json
@@ -11,20 +11,16 @@
     "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
-    "express": "4.18.2",
-    "cors": "2.8.5",
-    "helmet": "7.1.0",
-    "morgan": "1.10.0",
-    "dotenv": "16.3.1",
-    "openai": "4.20.1",
-    "axios": "1.6.2",
-    "@supabase/supabase-js": "2.38.4",
-    "zod": "3.22.4",
-    "winston": "3.11.0",
-    "rate-limiter-flexible": "3.0.8",
-    "bull": "4.12.2",
-    "redis": "4.6.11",
-    "node-cron": "3.0.3"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
+    "openai": "^4.20.1",
+    "axios": "^1.6.2",
+    "@supabase/supabase-js": "^2.38.4",
+    "zod": "^3.22.4",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
