--- a/backend/package.json
+++ b/backend/package.json
@@ -23,16 +23,16 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.21",
-    "@types/cors": "2.8.17",
-    "@types/morgan": "1.9.9",
-    "@types/node": "20.10.4",
-    "typescript": "5.3.3",
-    "tsx": "4.6.2",
-    "eslint": "8.55.0",
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
-    "jest": "29.7.0",
-    "@types/jest": "29.5.8"
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.4",
+    "typescript": "^5.3.3",
+    "tsx": "^4.6.2",
+    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.8"
   }
 }
