--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,32 +11,33 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@hookform/resolvers": "3.3.2",
+    "@supabase/supabase-js": "^2.53.0",
     "@types/node": "20.10.4",
     "@types/react": "18.2.42",
     "@types/react-dom": "18.2.17",
-    "typescript": "5.3.3",
-    "tailwindcss": "3.3.6",
     "autoprefixer": "10.4.16",
-    "postcss": "8.4.32",
-    "lucide-react": "0.294.0",
-    "framer-motion": "10.16.16",
-    "recharts": "2.8.0",
-    "react-hook-form": "7.48.2",
-    "zod": "3.22.4",
-    "@hookform/resolvers": "3.3.2",
     "axios": "1.6.2",
-    "date-fns": "2.30.0",
-    "react-hot-toast": "2.4.1",
     "clsx": "2.0.0",
-    "tailwind-merge": "2.2.0"
+    "date-fns": "2.30.0",
+    "framer-motion": "10.16.16",
+    "lucide-react": "0.294.0",
+    "next": "14.0.4",
+    "postcss": "8.4.32",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.48.2",
+    "react-hot-toast": "2.4.1",
+    "recharts": "2.8.0",
+    "tailwind-merge": "2.2.0",
+    "tailwindcss": "3.3.6",
+    "typescript": "5.3.3",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "eslint": "8.55.0",
-    "eslint-config-next": "14.0.4",
     "@tailwindcss/forms": "0.5.7",
-    "@tailwindcss/typography": "0.5.10"
+    "@tailwindcss/typography": "0.5.10",
+    "eslint": "8.55.0",
+    "eslint-config-next": "14.0.4"
   }
 }
