--- a/backend/package.json
+++ b/backend/package.json
@@ -11,28 +11,30 @@
     "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.38.4",
+    "@types/nodemailer": "^6.4.17",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
+    "nodemailer": "^7.0.5",
     "openai": "^4.20.1",
-    "axios": "^1.6.2",
-    "@supabase/supabase-js": "^2.38.4",
-    "zod": "^3.22.4",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.4",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2",
-    "eslint": "^8.55.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8"
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   }
 }
